Relative Clauses ok

--- a/test/gn_de.html
+++ b/test/gn_de.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<html><body>
+<html><head></head><body>
 - EU will den deutschen Kandidaten Koch-Weser als Chef des IWF
 
 Porto. Die Europaeische Union haelt am deutschen Kandidaten Koch-Weser fuer
