--- a/web/test.html
+++ b/web/test.html
@@ -3,18 +3,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="robots" content="noindex, nofollow">
-<link rel="stylesheet" type="text/css" href="test_files/stylesheet.css">
+<link rel="stylesheet" type="text/css" href="test_files/stylesheet.css" />
 <title>gramword Filter Result</title>
 </head>
 <body>
-<!--?xml version="1.0" encoding="UTF-8"?-->
 
-
-<link rel="stylesheet" title="all" type="text/css" href="test_files/all.css">
-<link rel="stylesheet" title="vbav" type="text/css" href="test_files/vbav.css">
-<link rel="stylesheet" title="sbajar" type="text/css" href="test_files/sbajar.css">
-<link rel="stylesheet" title="nmnu" type="text/css" href="test_files/nmnu.css">
-<link rel="stylesheet" title="prcj" type="text/css" href="test_files/prcj.css">
+<link rel="stylesheet" title="all" type="text/css" href="test_files/all.css"       />
+<link rel="stylesheet" title="vbav" type="text/css" href="test_files/vbav.css"     />
+<link rel="stylesheet" title="sbajar" type="text/css" href="test_files/sbajar.css" />
+<link rel="stylesheet" title="nmnu" type="text/css" href="test_files/nmnu.css"     />
+<link rel="stylesheet" title="prcj" type="text/css" href="test_files/prcj.css"     />
 <script type="text/javascript" src="test_files/script.js"></script>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
